// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb <Breadcrumb.Item> 中传入href属性，文字变成超链接 1`] = `
.c2 {
  font-size: 1.4rem;
  display: inline-block;
  margin-left: 1rem;
  margin-right: 1rem;
  color: #999999;
}

.c1 {
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #999999;
}

.c0 {
  display: inline-block;
  padding: 0;
  box-sizing: border-box;
}

<span>
  <div
    className="c0"
    style={Object {}}
  >
    <span
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <a
        className="c1"
        href="/"
        style={Object {}}
      >
        主页
      </a>
    </span>
    <span
      className="c2"
      style={Object {}}
    >
      &gt;
    </span>
    <span
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <a
        className="c1"
        href="/"
        style={Object {}}
      >
        一级菜单
      </a>
    </span>
    <span
      className="c2"
      style={Object {}}
    >
      &gt;
    </span>
    <span
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <a
        className="c1"
        href="/"
        style={Object {}}
      >
        二级菜单
      </a>
    </span>
    <span
      className="c2"
      style={Object {}}
    >
      
    </span>
  </div>
</span>
`;

exports[`Breadcrumb <Breadcrumb> 中separator分隔符 1`] = `
.c2 {
  font-size: 1.4rem;
  display: inline-block;
  margin-left: 1rem;
  margin-right: 1rem;
  color: #999999;
}

.c1 {
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #999999;
}

.c0 {
  display: inline-block;
  padding: 0;
  box-sizing: border-box;
}

<span>
  <div
    className="c0"
    style={Object {}}
  >
    <span
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <a
        className="c1"
        style={Object {}}
      >
        主页
      </a>
    </span>
    <span
      className="c2"
      style={Object {}}
    >
      &gt;
    </span>
    <span
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <a
        className="c1"
        style={Object {}}
      >
        一级菜单
      </a>
    </span>
    <span
      className="c2"
      style={Object {}}
    >
      &gt;
    </span>
    <span
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <a
        className="c1"
        style={Object {}}
      >
        二级菜单
      </a>
    </span>
    <span
      className="c2"
      style={Object {}}
    >
      
    </span>
  </div>
</span>
`;

exports[`Breadcrumb <Breadcrumb> 中传入图标 1`] = `
.c3 {
  font-size: 1.4rem;
  display: inline-block;
  margin-left: 1rem;
  margin-right: 1rem;
  color: #999999;
}

.c1 {
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #999999;
}

.c0 {
  display: inline-block;
  padding: 0;
  box-sizing: border-box;
}

.c2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: pointer;
  font-size: 1.2rem;
}

<span>
  <div
    className="c0"
    style={Object {}}
  >
    <span
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <a
        className="c1"
        style={Object {}}
      >
        <span>
          <i
            className="lugia-icon-reminder_close_circle_o  c2"
          />
        </span>
        <span>
          主页
        </span>
      </a>
    </span>
    <span
      className="c3"
      style={Object {}}
    >
      &gt;
    </span>
    <span
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <a
        className="c1"
        style={Object {}}
      >
        <span>
          一级面包屑菜单
        </span>
        <span>
          <i
            className="lugia-icon-reminder_close_circle_o  c2"
          />
        </span>
      </a>
    </span>
    <span
      className="c3"
      style={Object {}}
    >
      
    </span>
  </div>
</span>
`;

exports[`Breadcrumb <Breadcrumb> 传入routes参数直接生成 面包屑 1`] = `
.c2 {
  font-size: 1.4rem;
  display: inline-block;
  margin-left: 1rem;
  margin-right: 1rem;
  color: #999999;
}

.c1 {
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #999999;
}

.c0 {
  display: inline-block;
  padding: 0;
  box-sizing: border-box;
}

<span>
  <div
    className="c0"
    style={Object {}}
  >
    <span
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <a
        className="c1"
        href="/index"
        style={Object {}}
      >
        
      </a>
    </span>
    <span
      className="c2"
      style={Object {}}
    >
      &gt;
    </span>
    <span
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <a
        className="c1"
        href="/index/first"
        style={Object {}}
      >
        
      </a>
    </span>
    <span
      className="c2"
      style={Object {}}
    >
      &gt;
    </span>
    <span
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <a
        className="c1"
        href="/index/first/second"
        style={Object {}}
      >
        
      </a>
    </span>
    <span
      className="c2"
      style={Object {}}
    >
      &gt;
    </span>
    <span
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <a
        className="c1"
        href="/index/first/second/third"
        style={Object {}}
      >
        
      </a>
    </span>
    <span
      className="c2"
      style={Object {}}
    >
      
    </span>
  </div>
</span>
`;

exports[`Breadcrumb <Breadcrumb>和<Breadcrumn.Item>配合使用 1`] = `
.c2 {
  font-size: 1.4rem;
  display: inline-block;
  margin-left: 1rem;
  margin-right: 1rem;
  color: #999999;
}

.c1 {
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #999999;
}

.c0 {
  display: inline-block;
  padding: 0;
  box-sizing: border-box;
}

<span>
  <div
    className="c0"
    style={Object {}}
  >
    <span
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <a
        className="c1"
        style={Object {}}
      >
        主页
      </a>
    </span>
    <span
      className="c2"
      style={Object {}}
    >
      /
    </span>
    <span
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <a
        className="c1"
        style={Object {}}
      >
        一级菜单
      </a>
    </span>
    <span
      className="c2"
      style={Object {}}
    >
      /
    </span>
    <span
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <a
        className="c1"
        style={Object {}}
      >
        二级菜单
      </a>
    </span>
    <span
      className="c2"
      style={Object {}}
    >
      
    </span>
  </div>
</span>
`;

exports[`Breadcrumb 最后一项也显示分隔符, lastSeparator 1`] = `
.c2 {
  font-size: 1.4rem;
  display: inline-block;
  margin-left: 1rem;
  margin-right: 1rem;
  color: #999999;
}

.c1 {
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #999999;
}

.c0 {
  display: inline-block;
  padding: 0;
  box-sizing: border-box;
}

<span>
  <div
    className="c0"
    style={Object {}}
  >
    <span
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <a
        className="c1"
        href="/index"
        style={Object {}}
      >
        
      </a>
    </span>
    <span
      className="c2"
      style={Object {}}
    >
      &gt;
    </span>
    <span
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <a
        className="c1"
        href="/index/first"
        style={Object {}}
      >
        
      </a>
    </span>
    <span
      className="c2"
      style={Object {}}
    >
      &gt;
    </span>
    <span
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <a
        className="c1"
        href="/index/first/second"
        style={Object {}}
      >
        
      </a>
    </span>
    <span
      className="c2"
      style={Object {}}
    >
      &gt;
    </span>
    <span
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <a
        className="c1"
        href="/index/first/second/third"
        style={Object {}}
      >
        
      </a>
    </span>
    <span
      className="c2"
      style={Object {}}
    >
      &gt;
    </span>
  </div>
</span>
`;
